Fixing label jumping because of border changes.

--- a/src/components/mx-input/mx-input.scss
+++ b/src/components/mx-input/mx-input.scss
@@ -101,7 +101,7 @@ mx-input {
         label {
           &.active {
             padding: 0 4px;
-            top: 4px !important;
+            top: 5px !important;
           }
         }
       }
@@ -122,7 +122,7 @@ mx-input {
       display: flex;
       width: 24px;
       flex-shrink: 0;
-      margin-right: 16px;
+      margin-right: 11px; // Label has 5px of margin...
     }
     .mds-input {
       flex-grow: 1;
